# server

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
migrations/2021-02-27-005450_create_post/: down.sql  up.sql
migrations/2021-02-27-065007_create_comment/: down.sql  up.sql
src/: main.rs  models.rs  routes.rs  schema.rs
