[package]
name = "server"
version = "0.1.0"
authors = ["Will Lane <williamlane923@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "numeric"] }
rocket = "0.4.7"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
bigdecimal = "0.2.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "diesel_postgres_pool"]
